{
  "version": 4,
  "terraform_version": "1.16.3",
  "serial": 19,
  "lineage": "7430bbc0-980e-7aae-108e-b6435565a9de",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "epicbook_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05a3e9423ae4d7a19",
            "arn": "arn:aws:ec2:us-east-1:602171705034:instance/i-0d4d298f1feb3b4ad",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d4d298f1feb3b4ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_name_vm",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02ec9845f0e3c8282"
              }
            ],
            "primary_network_interface_id": "eni-02ec9845f0e3c8282",
            "private_dns": "ip-10-0-1-162.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.162",
            "public_dns": "ec2-3-238-186-246.compute-1.amazonaws.com",
            "public_ip": "3.238.186.246",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07116a0c7962a0d29",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-098a63a5697cd5fdf",
            "tags": {
              "Name": "epicbook-ec2-web"
            },
            "tags_all": {
              "Name": "epicbook-ec2-web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00e1b5c6759007951"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "602171705034",
            "id": "i-0d4d298f1feb3b4ad",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.deployer1",
            "aws_security_group.vm_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602171705034:internet-gateway/igw-038443538712c060a",
            "id": "igw-038443538712c060a",
            "owner_id": "602171705034",
            "region": "us-east-1",
            "tags": {
              "Name": "epicbook-internet-gateway"
            },
            "tags_all": {
              "Name": "epicbook-internet-gateway"
            },
            "vpc_id": "vpc-0465a01eee8ac5e68"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "602171705034",
            "id": "igw-038443538712c060a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602171705034:route-table/rtb-0be761ae595053501",
            "id": "rtb-0be761ae595053501",
            "owner_id": "602171705034",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "epicbook-private-route-table"
            },
            "tags_all": {
              "Name": "epicbook-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0465a01eee8ac5e68"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "602171705034",
            "id": "rtb-0be761ae595053501",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602171705034:route-table/rtb-0fc7364b387a7d02c",
            "id": "rtb-0fc7364b387a7d02c",
            "owner_id": "602171705034",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-038443538712c060a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "epicbook-public-route-table"
            },
            "tags_all": {
              "Name": "epicbook-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0465a01eee8ac5e68"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "602171705034",
            "id": "rtb-0fc7364b387a7d02c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d99fe77fccd8abc2",
            "region": "us-east-1",
            "route_table_id": "rtb-0be761ae595053501",
            "subnet_id": "subnet-0ed2c8feab9510b57"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "602171705034",
            "id": "rtbassoc-0d99fe77fccd8abc2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_db_1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d72cfecf30a65c22",
            "region": "us-east-1",
            "route_table_id": "rtb-0be761ae595053501",
            "subnet_id": "subnet-0fb8191cd27feb93a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "602171705034",
            "id": "rtbassoc-0d72cfecf30a65c22",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_db_2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01071a84aee18e59d",
            "region": "us-east-1",
            "route_table_id": "rtb-0fc7364b387a7d02c",
            "subnet_id": "subnet-098a63a5697cd5fdf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "602171705034",
            "id": "rtbassoc-01071a84aee18e59d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602171705034:security-group/sg-0dff1030dc8526150",
            "description": "Security group for rds database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dff1030dc8526150",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00e1b5c6759007951"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-security-group-name",
            "name_prefix": "",
            "owner_id": "602171705034",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "epicbook-db-sg"
            },
            "tags_all": {
              "Name": "epicbook-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0465a01eee8ac5e68"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "602171705034",
            "id": "sg-0dff1030dc8526150",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vm_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vm_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602171705034:security-group/sg-00e1b5c6759007951",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e1b5c6759007951",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "102.88.108.149/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vm-security-group-name",
            "name_prefix": "",
            "owner_id": "602171705034",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "epicbook-vm-sg"
            },
            "tags_all": {
              "Name": "epicbook-vm-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0465a01eee8ac5e68"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "602171705034",
            "id": "sg-00e1b5c6759007951",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602171705034:subnet/subnet-0ed2c8feab9510b57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed2c8feab9510b57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "602171705034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-db-subnet-a"
            },
            "tags_all": {
              "Name": "private-db-subnet-a"
            },
            "vpc_id": "vpc-0465a01eee8ac5e68"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "602171705034",
            "id": "subnet-0ed2c8feab9510b57",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602171705034:subnet/subnet-0fb8191cd27feb93a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb8191cd27feb93a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "602171705034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-db-subnet-b"
            },
            "tags_all": {
              "Name": "private-db-subnet-b"
            },
            "vpc_id": "vpc-0465a01eee8ac5e68"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "602171705034",
            "id": "subnet-0fb8191cd27feb93a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602171705034:subnet/subnet-098a63a5697cd5fdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098a63a5697cd5fdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "602171705034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0465a01eee8ac5e68"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "602171705034",
            "id": "subnet-098a63a5697cd5fdf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602171705034:vpc/vpc-0465a01eee8ac5e68",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a6763489acd9ed5f",
            "default_route_table_id": "rtb-0daba75d354748d25",
            "default_security_group_id": "sg-0dc51a7a570228469",
            "dhcp_options_id": "dopt-02ea0c56bff002206",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0465a01eee8ac5e68",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0daba75d354748d25",
            "owner_id": "602171705034",
            "region": "us-east-1",
            "tags": {
              "Name": "epicbook-vpc"
            },
            "tags_all": {
              "Name": "epicbook-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "602171705034",
            "id": "vpc-0465a01eee8ac5e68",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}